packages/taquito-michel-codec/test/contracts_007/ill_typed/big_dip.tz
parameter unit;
storage unit;
code { DIP 1073741824 { }; # = 0x3fffffff + 1
       DROP; }
